--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,8 @@ jobs:
       - run: npm ci
       - run: npm run build
 
-      - name: Move dist to docs
-        run: |
-          rm -rf docs
-          mv dist docs
-
-      - name: Commit and push docs
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add docs
-          git commit -m "Deploy to docs" || echo "No changes to commit"
-          git push
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
