--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp -r dist docs",
+    "build": "vite build && rm -rf docs && mkdir docs && cp -r dist/. docs",
     "preview": "vite preview"
   },
   "dependencies": {
